Robust Server State Detection, Fixed Command Handling, And More Server Managing Stuff.